# homerun

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .release-please-config.json  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  bash.exe.stackdump
.claude/: settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage-badge.yml  release-build.yml  release-please.yml
apps/desktop/: index.html  package-lock.json  package.json  vitest.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: client.rs  commands.rs  lib.rs  main.rs  tray.rs  window.rs
apps/desktop/src/api/: commands.ts  types.ts
apps/desktop/src/components/: ActiveRunners.test.tsx  ActiveRunners.tsx  ConfirmDialog.tsx  JobProgress.tsx  Layout.tsx  NewRunnerWizard.test.tsx  NewRunnerWizard.tsx  RunnerActions.tsx  RunnerGroupRow.tsx  RunnerTable.test.tsx  RunnerTable.tsx  Sidebar.test.tsx  Sidebar.tsx  StatsCard.tsx  StatusBadge.test.tsx  StatusBadge.tsx
apps/desktop/src/hooks/: AuthContext.tsx  useAuth.test.tsx  useAuth.ts  useDaemonLogs.ts  useEvents.ts  useJobHistory.ts  useJobSteps.ts  useMetrics.test.ts  useMetrics.ts  useNotifications.test.ts  useNotifications.ts  useRepos.ts  useRunners.test.ts  useRunners.ts  useScan.test.ts  useScan.ts  useTrayIcon.ts
apps/desktop/src/pages/: Daemon.tsx  Dashboard.tsx  MiniView.tsx  Monitoring.tsx  Repositories.tsx  RunnerDetail.tsx  Runners.tsx  Settings.tsx  TrayPanel.tsx
blog/: medium-post.md  reddit-post.md
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  launchd.rs  lib.rs  logging.rs  main.rs  metrics.rs  notifications.rs  scanner.rs  server.rs  updater.rs
crates/daemon/src/api/: auth.rs  daemon_logs.rs  events.rs  groups.rs  history.rs  logs.rs  metrics.rs  mod.rs  preferences.rs  repos.rs  runners.rs  scanner.rs  service.rs  shutdown.rs  steps.rs  updates.rs
crates/daemon/src/auth/: keychain.rs  mod.rs
crates/daemon/src/github/: mod.rs  types.rs
crates/daemon/src/platform/: ipc.rs  mod.rs  process.rs  service.rs  shell.rs
crates/daemon/src/runner/: binary.rs  history.rs  mod.rs  process.rs  state.rs  step_log_cache.rs  steps.rs  types.rs
crates/daemon/src/scanner/: mod.rs  persistence.rs
crates/daemon/tests/: daemon_logs_test.rs  integration_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  routes.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  cli.rs  client.rs  daemon_lifecycle.rs  event.rs  lib.rs  main.rs
crates/tui/src/ui/: daemon.rs  header.rs  mod.rs  monitoring.rs  repos.rs  runners.rs  status_bar.rs  tabs.rs
crates/tui/tests/: action_handler_test.rs  cli_integration_test.rs  daemon_integration_test.rs  tui_integration_test.rs
docs/: ARCHITECTURE.md  SELF_HOSTED_RUNNERS.md
docs/superpowers/plans/: 2026-03-21-homerun-daemon-core.md  2026-03-21-homerun-tauri-app.md  2026-03-21-homerun-tui.md  2026-03-22-process-tree-metrics.md  2026-03-22-runner-grouping.md  2026-03-23-daemon-logs-and-process-info.md  2026-03-23-job-history.md  2026-03-23-job-progress-steps.md  2026-03-23-settings-toggles-fix.md  2026-03-24-daemon-lifecycle.md  2026-03-24-dmg-packaging.md  2026-03-24-fix-missing-job-steps.md  2026-03-25-sidebar-active-runners.md  2026-03-26-runner-page-enhancements.md  2026-03-27-compact-mini-view.md  2026-03-27-react-test-coverage.md  2026-03-31-windows-platform.md
docs/superpowers/specs/: 2026-03-21-self-runner-design.md  2026-03-22-job-context-design.md  2026-03-22-process-tree-metrics-design.md  2026-03-22-resource-bars-design.md  2026-03-22-runner-grouping-design.md  2026-03-23-daemon-logs-and-process-info-design.md  2026-03-23-job-progress-steps-design.md  2026-03-24-daemon-lifecycle-design.md  2026-03-24-dmg-packaging-design.md  2026-03-24-fix-missing-job-steps-design.md  2026-03-25-sidebar-active-runners-design.md  2026-03-26-runner-page-enhancements-design.md  2026-03-27-compact-mini-view-design.md  2026-03-27-react-test-coverage-design.md  2026-03-31-windows-platform-design.md
examples/: basic-setup.md  multi-runner.md
examples/workflow-templates/: self-hosted.yml
scripts/: setup.sh  test-all.sh
(+5 files in other folders)
