[workspace]
resolver = "2"
members = ["crates/daemon", "crates/tui", "crates/test-utils"]

[workspace.package]
version = "0.5.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/aGallea/homerun"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
