[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
tempfile = "3"
homerun = { path = "../tui" }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
