[package]
name = "homerun"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "homerun"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
tower = "0.5"
tokio-tungstenite = "0.26"
futures = "0.3"
dirs = "5"

[dev-dependencies]
tempfile = "3"
